; ModuleID = '/home/carl/AnghaBench/freebsd/sys/x86/acpica/extr_madt.c_madt_handle_local_nmi.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/x86/acpica/extr_madt.c_madt_handle_local_nmi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@APIC_ID_ALL = common dso_local global i32 0, align 4
@bootverbose = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [48 x i8] c"MADT: Ignoring local NMI routed to ACPI CPU %u\0A\00", align 1
@APIC_LVT_LINT0 = common dso_local global i32 0, align 4
@APIC_LVT_LINT1 = common dso_local global i32 0, align 4
@APIC_LVT_DM_NMI = common dso_local global i32 0, align 4
@ACPI_MADT_TRIGGER_CONFORMS = common dso_local global i32 0, align 4
@ACPI_MADT_POLARITY_CONFORMS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i64, i32)* @madt_handle_local_nmi to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @madt_handle_local_nmi(i32 %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp eq i32 %9, -1
  br i1 %10, label %11, label %13

11:                                               ; preds = %3
  %12 = load i32, i32* @APIC_ID_ALL, align 4
  store i32 %12, i32* %7, align 4
  br label %25

13:                                               ; preds = %3
  %14 = load i32, i32* %4, align 4
  %15 = call i64 @madt_find_cpu(i32 %14, i32* %7)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %24

17:                                               ; preds = %13
  %18 = load i64, i64* @bootverbose, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %17
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @printf(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0), i32 %21)
  br label %23

23:                                               ; preds = %20, %17
  br label %58

24:                                               ; preds = %13
  br label %25

25:                                               ; preds = %24, %11
  %26 = load i64, i64* %5, align 8
  %27 = icmp eq i64 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %25
  %29 = load i32, i32* @APIC_LVT_LINT0, align 4
  store i32 %29, i32* %8, align 4
  br label %32

30:                                               ; preds = %25
  %31 = load i32, i32* @APIC_LVT_LINT1, align 4
  store i32 %31, i32* %8, align 4
  br label %32

32:                                               ; preds = %30, %28
  %33 = load i32, i32* %7, align 4
  %34 = load i32, i32* %8, align 4
  %35 = load i32, i32* @APIC_LVT_DM_NMI, align 4
  %36 = call i32 @lapic_set_lvt_mode(i32 %33, i32 %34, i32 %35)
  %37 = load i32, i32* %6, align 4
  %38 = load i32, i32* @ACPI_MADT_TRIGGER_CONFORMS, align 4
  %39 = and i32 %37, %38
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %47, label %41

41:                                               ; preds = %32
  %42 = load i32, i32* %7, align 4
  %43 = load i32, i32* %8, align 4
  %44 = load i32, i32* %6, align 4
  %45 = call i32 @interrupt_trigger(i32 %44, i32 0)
  %46 = call i32 @lapic_set_lvt_triggermode(i32 %42, i32 %43, i32 %45)
  br label %47

47:                                               ; preds = %41, %32
  %48 = load i32, i32* %6, align 4
  %49 = load i32, i32* @ACPI_MADT_POLARITY_CONFORMS, align 4
  %50 = and i32 %48, %49
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %58, label %52

52:                                               ; preds = %47
  %53 = load i32, i32* %7, align 4
  %54 = load i32, i32* %8, align 4
  %55 = load i32, i32* %6, align 4
  %56 = call i32 @interrupt_polarity(i32 %55, i32 0)
  %57 = call i32 @lapic_set_lvt_polarity(i32 %53, i32 %54, i32 %56)
  br label %58

58:                                               ; preds = %23, %52, %47
  ret void
}

declare dso_local i64 @madt_find_cpu(i32, i32*) #1

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @lapic_set_lvt_mode(i32, i32, i32) #1

declare dso_local i32 @lapic_set_lvt_triggermode(i32, i32, i32) #1

declare dso_local i32 @interrupt_trigger(i32, i32) #1

declare dso_local i32 @lapic_set_lvt_polarity(i32, i32, i32) #1

declare dso_local i32 @interrupt_polarity(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
